tests/baselines/reference/listFailure.errors.txt
==== tests/cases/compiler/listFailure.ts (10 errors) ====
    module Editor {
    
        export class Buffer {
            lines: List<Line> = ListMakeHead<Line>();
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2025: Public property 'lines' of exported class has or is using private type 'List<Line>'.
            
            addLine(lineText: string): List<Line> {
                                       ~~~~~~~~~~
!!! error TS2056: Return type of public method from exported class has or is using private type 'List<Line>'.
                
                var line: Line = new Line();
                var lineEntry = this.lines.add(line);
    
                return lineEntry;
                ~~~~~~~~~~~~~~~~~
!!! error TS2056: Return type of public method from exported class has or is using private type 'List<Line>'.
            }    
        }
        
        export function ListRemoveEntry<U>(entry: List<U>): List<U> { 
                                           ~~~~~~~~~~~~~~
!!! error TS2040: Parameter 'entry' of exported function has or is using private type 'List<U>'.
                                                            ~~~~~~~
!!! error TS2058: Return type of exported function has or is using private type 'List<U>'.
            return entry;
         ~~~~~~~~~~~~~
!!! error TS2058: Return type of exported function has or is using private type 'List<U>'.
        }
    
        export function ListMakeHead<U>(): List<U> {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                           ~~~~~~~
!!! error TS2058: Return type of exported function has or is using private type 'List<U>'.
            return null;
    ~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2058: Return type of exported function has or is using private type 'List<U>'.
    
        export function ListMakeEntry<U>(data: U): List<U> {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                   ~~~~~~~
!!! error TS2058: Return type of exported function has or is using private type 'List<U>'.
            return null;
    ~~~~~~~~~~~~~~
        }    
    ~~~~~
!!! error TS2058: Return type of exported function has or is using private type 'List<U>'.
    
        class List<T> { 
            public next: List<T>; 
    
            add(data: T): List<T> {
                this.next = ListMakeEntry(data);
                return this.next;
            }
    
            popEntry(head: List<T>): List<T> {
                return (ListRemoveEntry(this.next));
            }      
        }
    
        export class Line {}
    }